syntax = "proto3";

option csharp_namespace = "CountwareTraffic.Services.Companies.Grpc";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "Grpc/Protos/baseArea.proto";

package subarea;

service Subarea {
	rpc GetSubAreaById(GetSubAreaRequest) returns (GetSubAreaDetailResponse){}
    rpc GetSubAreas(GetSubAreasRequest) returns (SubAreaPagingResponse){}
    rpc ChangeSubArea(UpdateSubAreaRequest) returns (baseArea.UpdateSuccessResponse){}
    rpc DeleteSubArea(DeleteSubAreaRequest) returns (baseArea.DeleteSuccessResponse){}
    rpc AddSubArea(CreateSubAreaRequest) returns (baseArea.CreateSuccessResponse){}
}


/*REQUESTS*/
message GetSubAreaRequest {
	string SubAreaId = 1;
}

message GetSubAreasRequest {
	string AreaId = 1;
    baseArea.PagingRequest PagingRequest = 2;
}

message UpdateSubAreaRequest{
    string SubAreaId = 1;
    string Name = 2;
    google.protobuf.StringValue Description = 3;
}

message DeleteSubAreaRequest{
    string SubAreaId = 1;
}

message CreateSubAreaRequest{
    string AreaId = 1;
    string Name = 2;
    google.protobuf.StringValue Description = 3;
}



/*RESPONSES*/
message SubAreaPagingResponse {
    int32 TotalCount = 1;
    int32 Page = 2;
    int32 Limit = 3;
    bool HasNextPage = 4;
    google.protobuf.Int32Value Next = 5;
    google.protobuf.Int32Value Prev = 6;
    repeated SubAreaDetail SubAreaDetails  = 7;
}

message GetSubAreaDetailResponse {
    SubAreaDetail SubAreaDetail  = 1;
}



/*MODELS*/
message SubAreaDetail
{
    string Id = 1;
    baseArea.Audit Audit = 2;
    string AreaId = 3;
    string Name = 4;
    google.protobuf.StringValue Description = 5;  
}




